--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             
             // 2秒后跳转
             setTimeout(() => {
-                window.location.href = 'https://xiaoovo663.github.io/mcworld.net.cn/';
+                window.location.href = 'https://xiaoovo663.github.io/HuaiXixian-MainWeb1314/';
             }, 2000);
         }
 
